--- a/public/main.css
+++ b/public/main.css
@@ -5,6 +5,7 @@ body, html {
   background-color: #fff;
   margin: 0;
   font-size: 16px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* Title Page */
